<resources>
    <string name="app_name">Smart Tooth Care</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article">Article</string>
    <string name="notification">Notification</string>
    <string name="stats">Stats</string>
    <string name="reminder">Reminder</string>
    <string name="interesting_facts">Interesting Facts</string>
    <string name="header">header</string>
    <string name="your_reminder">Your Reminder</string>
    <string name="have_you_brushed_your_teeth_properly_today">Have you brushed your teeth properly today?</string>
    <string name="header_reminder">Header reminder</string>
    <string name="indicator">Indicator</string>
    <string name="button_add_new_reminder">Button add new reminder</string>
    <string name="add_new_reminder">Add new reminder</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="smart_toothcare">Smart Toothcare</string>
    <string name="update">Update</string>
    <string name="update_reminder">Update reminder</string>
    <string name="history">History</string>
    <string name="button_delete_history">Button delete history</string>
</resources>